--- a/app/public/wp-content/themes/amera/assets/scss/style.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/style.scss
@@ -30,7 +30,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import 'components/login-modal'; //imports _login-modal.scss from the /components/ directory
 @import 'components/calculator'; //imports _calculator.scss from the /components/ directory
 @import 'pages/opportunity-fund'; //imports _opportunity-fund.scss from the /components/ directory
-@import 'pages/landing'; //imports _landing.scss from the /components/ directory
+@import 'pages/landing'; //imports _landing.scss from the /pages/ directory
 
 
 html {
