update 404 page and dashboard img

--- a/app/public/wp-content/themes/amera/assets/scss/style.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/style.scss
@@ -1032,3 +1032,7 @@ ul.sponsor-list li {
     display:block;
   }
 }
+
+.dashboard-img .img-link, .dashboard-img .img-link--gradient-dark {
+  height:150px;
+}
