--- a/app/public/wp-content/themes/amera/assets/scss/style.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/style.scss
@@ -1036,3 +1036,13 @@ ul.sponsor-list li {
 .dashboard-img .img-link, .dashboard-img .img-link--gradient-dark {
   height:150px;
 }
+
+.pdf-term {
+  width:100%;
+  height:100vh;
+}
+
+.pdf-deck {
+  width:75%;
+  height:100vh;
+}
