Accredited Investor added to signup form

--- a/app/public/wp-content/themes/amera/assets/scss/components/_login-modal.scss
+++ b/app/public/wp-content/themes/amera/assets/scss/components/_login-modal.scss
@@ -68,3 +68,14 @@ letter-spacing: .2px;
 .login-logo {
   height:120px;
 }
+
+.radios {
+  margin-top:10px;
+  margin-left:2px;
+  font-size: 1.1em;
+}
+
+.radios input {
+  margin-right: 10px;
+}
+
